@@ -470,3 +470,5 @@
 	* Added a '--log' switch to sygpiotest(1).
 2016-12-13 Fred Gleason <fredg@paravelsystems.com>
 	* Added sygpiotest(1) to the set of installed programs.
+2016-12-13 Fred Gleason <fredg@paravelsystems.com>
+	* Removed syslog calls for GPIO events in 'sy/sygpio_server.cpp'.
